# pathy-knowledge-server

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start-server.ps1
app/: __init__.py  config.py  deps.py  main.py
app/models/: schemas.py
app/routers/: data_structure.py  dialogue_recall.py  health.py  layers.py  llm_settings.py  media.py  meta.py  tasks.py  wiki_embedding.py
app/services/: data_structure.py  dialogue_recall.py  llm_config.py  llm_tasks.py  llm_test.py  media_codes.py  media_store.py  recall_stopwords.py  storage.py  vector_index.py
data/.pathy/: embedding_api_key  llm.json  openai_api_key.example  recall_stopwords.txt  wiki_embedding_index.json
data/raw/: 小视知识库V1-1.txt  小视知识库V1-2.txt  小视知识库V1-3.txt  小视知识库V1-4.txt  小视知识库V1-5.txt  小视知识库V1-6.txt  小视知识库V1-7.txt  小视知识库V1-8.txt  小视知识库V1-9.txt
data/schema/: AGENTS.md
data/wiki/: 小视知识库V1-1.md  小视知识库V1-2.md  小视知识库V1-8.md
deploy/: nginx-client-max-body-size.example.conf
docs/: API.md
scripts/: verify_recall_integration.py
